--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "SaleService",
+    "DatabaseName": "ProductDb",
     "CollectionName": "Products"
   },
   "Logging": {
