--- a/Catalog.API/Dockerfile
+++ b/Catalog.API/Dockerfile
@@ -5,7 +5,7 @@ EXPOSE 80/tcp
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 as publish
 WORKDIR /app
-COPY SaleService.csproj .
+COPY Catalog.API.csproj .
 RUN dotnet restore
 COPY . .
 RUN dotnet publish -c Release -o dist 
@@ -13,4 +13,4 @@ RUN dotnet publish -c Release -o dist
 FROM base as final
 WORKDIR /app
 COPY --from=publish /app/dist .
-ENTRYPOINT ["dotnet", "SaleService.dll"]
+ENTRYPOINT ["dotnet", "Catalog.API.dll"]
