Feature: Redis integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,16 +10,38 @@ services:
         - "27017:27017"
         volumes:
             - mongo_data:/data/db
+    
+    basketdb:
+        image: redis:alpine
+        container_name: basketdb
+        restart: always
+        ports:
+        - "6379:6379"
 
-    saleserviceapi:
+    catalog.api:
         container_name: Catalog.API.api
+        restart: always
         build:
             context: .
             dockerfile: ./Catalog.API/Dockerfile
         ports:
-            - "5000:8080"
+            - "8000:80"
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
             - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
         depends_on:
             - catalogdb
+
+    basket.api:
+        container_name: Basket.API.api
+        restart: always
+        build:
+            context: .
+            dockerfile: ./Basket.API/Dockerfile
+        ports:
+            - "8001:80"
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - "CacheSettings:ConnectionString=basketdb:6379"
+        depends_on:
+            - basketdb
