--- a/Catalog.API/Dockerfile
+++ b/Catalog.API/Dockerfile
@@ -4,16 +4,16 @@ EXPOSE 80/tcp
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["Basket.API/Basket.API.csproj", "Basket.API/"]
-RUN dotnet restore "Basket.API/Basket.API.csproj"
+COPY ["Catalog.API/Catalog.API.csproj", "Catalog.API/"]
+RUN dotnet restore "Catalog.API/Catalog.API.csproj"
 COPY . .
-WORKDIR "/src/Basket.API"
-RUN dotnet build "Basket.API.csproj" -c Release -o /app/build
+WORKDIR "/src/Catalog.API"
+RUN dotnet build "Catalog.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Basket.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Catalog.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Basket.API.dll"]
+ENTRYPOINT ["dotnet", "Catalog.API.dll"]
