--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,20 @@ services:
         - "27017:27017"
         volumes:
             - mongo_data:/data/db
+    
+    basketdb:
+        image: redis:alpine
+        container_name: basketdb
+        restart: always
+        ports:
+        - "6379:6379"
 
-    saleserviceapi:
-        container_name: saleservice.api
+    catalog.api:
+        container_name: Catalog.API.api
+        restart: always
         build:
             context: .
-            dockerfile: Dockerfile
+            dockerfile: ./Catalog.API/Dockerfile
         ports:
             - "5000:8080"
         environment:
@@ -23,3 +31,17 @@ services:
             - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
         depends_on:
             - catalogdb
+
+    basket.api:
+        container_name: Basket.API.api
+        restart: always
+        build:
+            context: .
+            dockerfile: ./Basket.API/Dockerfile
+        ports:
+            - "5001:8080"
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - "CacheSettings:ConnectionString=basketdb:6379"
+        depends_on:
+            - basketdb
