--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
             context: .
             dockerfile: ./Catalog.API/Dockerfile
         ports:
-            - "5000:8080"
+            - "5001:8080"
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
             - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
@@ -39,9 +39,25 @@ services:
             context: .
             dockerfile: ./Basket.API/Dockerfile
         ports:
-            - "5001:8080"
+            - "5002:8080"
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
             - "CacheSettings:ConnectionString=basketdb:6379"
         depends_on:
             - basketdb
+
+    gateway.api:
+        container_name: Gateway.API.api
+        restart: always
+        build:
+            context: .
+            dockerfile: ./Gateway.API/Dockerfile
+        ports:
+            - "5000:8080"
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - ReverseProxy:Clusters:catalog-cluster:Destinations:destination1:Address=catalog.api
+            - ReverseProxy:Clusters:basket-cluster:Destinations:destination1:Address=basket.api
+        depends_on:
+            - catalog.api
+            - basket.api
