Feature: Add Gateway API (#4)
* Feature: Creating Basket.API project

* Feature: Redis integration

* Refactor: Adjusting dockerfile for Catalog.API

* Refactor: Adjust dockerfiles for deploy

* Feature: Add mongo and redis railway connection var env

* Feature: Implementing API Gateway

* chore: adjust services host and dockerfile

--- a/Catalog.API/Dockerfile
+++ b/Catalog.API/Dockerfile
@@ -1,17 +1,15 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-EXPOSE 80/tcp
+EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["Catalog.API/Catalog.API.csproj", "Catalog.API/"]
-RUN dotnet restore "Catalog.API/Catalog.API.csproj"
 COPY . .
-WORKDIR "/src/Catalog.API"
-RUN dotnet build "Catalog.API.csproj" -c Release -o /app/build
+RUN dotnet restore "Catalog.API/Catalog.API.csproj"
+RUN dotnet build "Catalog.API/Catalog.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Catalog.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Catalog.API/Catalog.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
