--- a/Basket.API/Dockerfile
+++ b/Basket.API/Dockerfile
@@ -4,14 +4,12 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["Basket.API/Basket.API.csproj", "Basket.API/"]
-RUN dotnet restore "Basket.API/Basket.API.csproj"
 COPY . .
-WORKDIR "/src/Basket.API"
-RUN dotnet build "Basket.API.csproj" -c Release -o /app/build
+RUN dotnet restore "Basket.API/Basket.API.csproj"
+RUN dotnet build "Basket.API/Basket.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Basket.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Basket.API/Basket.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
