chore: adjust services host and dockerfile

--- a/Gateway.API/Dockerfile
+++ b/Gateway.API/Dockerfile
@@ -5,11 +5,11 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY . .
-RUN dotnet restore "Gateway.API.csproj"
-RUN dotnet build "Gateway.API.csproj" -c Release -o /app/build
+RUN dotnet restore "Gateway.API/Gateway.API.csproj"
+RUN dotnet build "Gateway.API/Gateway.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Gateway.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Gateway.API/Gateway.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
