--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,8 @@ services:
             - "5000:8080"
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
-            - ReverseProxy:Clusters:catalog-cluster:Destinations:destination1:Address=catalog.api
-            - ReverseProxy:Clusters:basket-cluster:Destinations:destination1:Address=basket.api
+            - ReverseProxy:Clusters:catalog-cluster:Destinations:destination1:Address=http://catalog.api:8080
+            - ReverseProxy:Clusters:basket-cluster:Destinations:destination1:Address=http://basket.api:8080
         depends_on:
             - catalog.api
             - basket.api
