--- a/Catalog.API/Dockerfile
+++ b/Catalog.API/Dockerfile
@@ -5,11 +5,11 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY . .
-RUN dotnet restore "Catalog.API.csproj"
-RUN dotnet build "Catalog.API.csproj" -c Release -o /app/build
+RUN dotnet restore "Catalog.API/Catalog.API.csproj"
+RUN dotnet build "Catalog.API/Catalog.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Catalog.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Catalog.API/Catalog.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
